get user by uuid
