# api.yaml
@@ -32,35 +32,17 @@ paths:
         '200':
           description: |-
             200 response
-#  /user/{uuid}:
-#    get:
-#      operationId: getUserByUUIDV1
-#      summary: Get a user by uuid
-#      parameters:
-#        - in: path
-#          name: uuid
-#          description: a user's unique ID
-#          schema:
-#            type: string
-#            format: uuid
-#      responses:
-#        '200':
-#          description: |-
-#            200 response
-#          content:
-#            application/json:
-#              schema:
-#                $ref: "#/components/schemas/User"
-  /user/{username}:
+  /user/{uuid}:
     get:
-      operationId: getUserByUsernameV1
-      summary: Get a user by username
+      operationId: getUserByUUIDV1
+      summary: Get a user by uuid
       parameters:
         - in: path
-          name: username
-          description: a username
+          name: uuid
+          description: a user's unique ID
           schema:
             type: string
+            format: uuid
       responses:
         '200':
           description: |-
